--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     compile files('libs/apache-httpcomponents-httpcore.jar')
     compile files('libs/apache-httpcomponents-httpmime.jar')
 
+    implementation 'com.github.bumptech.glide:glide:4.3.1'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
