--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,15 +19,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".MainActivity"/>
-        <activity
-            android:name=".AccountSettingsActivity"/>
-        <activity
-            android:name=".EditProfileActivity"/>
+        <activity android:name=".AccountSettingsActivity"/>
+        <activity android:name=".EditProfileActivity"/>
         <activity android:name=".EditPasswordActivity"/>
         <activity android:name=".ResetPasswordActivity"></activity>
         <activity android:name=".SignUpActivity"/>
+        <activity android:name=".MenuDetailActivity"/>
+        <activity android:name=".MainActivity"/>
+        <activity android:name=".ConsultationAcitivity"/>
+        <activity android:name=".ConsultationResultActivity"/>
     </application>
 
 </manifest>
