--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     defaultConfig {
         vectorDrawables.useSupportLibrary = true
         applicationId "com.kudubisa.app.navdrawertemplate"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -33,11 +33,12 @@ dependencies {
     //Saripar
     implementation 'com.mobsandgeeks:android-saripaar:2.0.3'
 
-    compile files('libs/apache-httpcomponents-httpclient.jar')
-    compile files('libs/apache-httpcomponents-httpcore.jar')
-    compile files('libs/apache-httpcomponents-httpmime.jar')
+    implementation files('libs/apache-httpcomponents-httpclient.jar')
+    implementation files('libs/apache-httpcomponents-httpcore.jar')
+    implementation files('libs/apache-httpcomponents-httpmime.jar')
 
     implementation 'com.github.bumptech.glide:glide:4.3.1'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
